# FITS-HDF5-VOL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
adapters/fits/: fits_adapter.c
cmake/: FetchCorpus.cmake  fits-hdf5-vol.pc.in  sciio-vol.pc.in
docs/: format-adapter-api.md  release-readiness.md
include/fits_hdf5/: adapter.h  fits_hdf5_vol.h  registry.h
include/sciio/: adapter.h  registry.h  sciio_vol.h
src/: fits_hdf5_vol_connector.c  registry.c  sciio_vol_connector.c
tests/fixtures/: build_fixtures.c
tests/golden/: bitpix_matrix.h5ls.txt  edge_keywords.h5ls.txt  image_2d.h5ls.txt  multi_hdu.h5ls.txt  primary_only.h5ls.txt  scaled_image.h5ls.txt  table_multidim.h5ls.txt  table_vlen.h5ls.txt  unsigned_bzero.h5ls.txt
tests/integration/: fuzz_smoke.c  perf_smoke.c  run_h5ls_golden.sh  run_roundtrip.sh  test_attr_edge.c  test_attr_read.c  test_bitpix_matrix.c  test_cfitsio_smoke.c  test_column_diff.c  test_column_units.c  test_complex_attr.c  test_concurrent_open.c  test_corpus_smoke.c  test_dataset_read_short.c  test_diff_image_2d.c  test_dup_keyword.c  test_envvar_load.c  test_extname_link.c  test_extname_rules.c  test_file_intent.c  test_fits_adapter.c  test_h5py_smoke.py  test_hyperslab.c  test_link_iter.c  test_non_fits_rejected.c  test_open_close.c  test_point_selection.c  test_random_groups_reject.c  test_raw_header.c  test_rdwr_rejected.c  test_register.c  test_scaled_image.c  test_table_multidim.c  test_table_rowview.c  test_table_vlen.c  test_unsigned_bzero.c  test_zimage_reject.c
tools/: download_test_data.py  fits_compare.c  fits_to_h5.c  h5_to_fits.c  make_demo_figures.py
